updated travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ matrix:
             - libx11-dev
       script:
         - cmake --version
-        - cmake .
+        - mkdir build
+        - cd build
+        - cmake ..
         - make -j 2
 
