--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,4 +67,20 @@ target_compile_definitions(
 unset(SRC_FILES)
 unset(DEMO)
 
+# ------------------------------------------------------------------------------
+set(DEMO Texture)
+set(SRC_DIR Texture)
+include_directories(${SRC_DIR})
+aux_source_directory(${SRC_DIR} SRC_FILES)
+add_executable(${DEMO} ${IMGUI_SRC_FILES} ${SRC_FILES} ${SRC_DIR}/glad/glad.c)
+target_link_libraries(${DEMO} glfw)
+target_compile_definitions(
+    ${DEMO} PUBLIC
+    -DPATH_TO_SRC_DIRECTORY="${CMAKE_SOURCE_DIR}/${SRC_DIR}/"
+    -DPATH_TO_ASSET_DIRECTORY="${CMAKE_SOURCE_DIR}/assets/"
+    -DPATH_TO_LEB_GLSL_LIBRARY="${CMAKE_SOURCE_DIR}/submodules/LongestEdgeBisection/GLSL/"
+)
+unset(SRC_FILES)
+unset(DEMO)
+
 
