--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,13 @@ aux_source_directory(${IMGUI_SRC_DIR} IMGUI_SRC_FILES)
 
 project (LongestEdgeBisectionDemos)
 
+# Add dependencies
+find_package(OpenMP)
+if(OPENMP_FOUND)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
 # ------------------------------------------------------------------------------
 set(DEMO ApiDebug)
 set(SRC_DIR ApiDebug)
